--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <h3>Tech Enthusiast | Developer | Learner</h3>
         <p>I’m a passionate student exploring the world of technology — from web development to data science. I love solving problems, building projects, and continuously learning new skills.</p>
       </div>
-      <img src="https://classical-green-fijrrwbnlw.edgeone.app/1000130014-Picsart-AiImageEnhancer.jpg" alt="Ujjwal Prakash">
+      <img src="./pics.jpeg" alt="Ujjwal Prakash">
     </section>
 
     <section class="about" id="about">
