--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <a class="project" href="http://127.0.0.1:5500/form2.html" target="_blank">Forms <span class="arrow">→</span></a>
         <a class="project" href="#" target="_blank">Dog Gallery <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/moonorbit.html" target="_blank">Moon Orbit <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/ferriswheel.html" target="_blank">Ferris Wheel <span class="arrow">→</span></a>
+        <a class="project" href="ferriswheel.html" target="_blank">Ferris Wheel <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/crypto16.html" target="_blank">Live Crypto Tracker <span class="arrow">→</span></a>
       </div>
       </div>
