--- a/index.html
+++ b/index.html
@@ -354,15 +354,14 @@
         <a class="project" href="http://127.0.0.1:5500/weekend_plans.html" target="_blank">Weekend Plans <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/table.html" target="_blank">Table <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/mywebpage.html" target="_blank">My Webpage <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/moviecollectionyable.html" target="_blank">Movie Collection <span class="arrow">→</span></a>
+        <a class="project" href="moviecollectionyable.html" target="_blank">Movie Collection <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/list.html" target="_blank">List <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/class%204/recipe.html" target="_blank">Recipe <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/class%206/semantic.html" target="_blank">Semantic Webpage <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/form2.html" target="_blank">Forms <span class="arrow">→</span></a>
-        <a class="project" href="#" target="_blank">Dog Gallery <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/moonorbit.html" target="_blank">Moon Orbit <span class="arrow">→</span></a>
+        <a class="project" href="moonorbit.html" target="_blank">Moon Orbit <span class="arrow">→</span></a>
         <a class="project" href="ferriswheel.html" target="_blank">Ferris Wheel <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/crypto16.html" target="_blank">Live Crypto Tracker <span class="arrow">→</span></a>
+        <a class="project" href="index.html" target="_blank">Live Crypto Tracker <span class="arrow">→</span></a>
       </div>
       </div>
     </section>
