--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     <section class="projects" id="projects">
       <h2>Projects</h2>
       <div class="project-list">
-        <a class="project" href="http://127.0.0.1:5500/weekend_plans.html" target="_blank">Weekend Plans <span class="arrow">→</span></a>
+        <a class="project" href="./weekend_plans.html" target="_blank">Weekend Plans <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/table.html" target="_blank">Table <span class="arrow">→</span></a>
         <a class="project" href="http://127.0.0.1:5500/mywebpage.html" target="_blank">My Webpage <span class="arrow">→</span></a>
         <a class="project" href="moviecollectionyable.html" target="_blank">Movie Collection <span class="arrow">→</span></a>
