--- a/index.html
+++ b/index.html
@@ -352,15 +352,15 @@
       <h2>Projects</h2>
       <div class="project-list">
         <a class="project" href="./weekend_plans.html" target="_blank">Weekend Plans <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/table.html" target="_blank">Table <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/mywebpage.html" target="_blank">My Webpage <span class="arrow">→</span></a>
-        <a class="project" href="moviecollectionyable.html" target="_blank">Movie Collection <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/list.html" target="_blank">List <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/class%204/recipe.html" target="_blank">Recipe <span class="arrow">→</span></a>
-        <a class="project" href="http://127.0.0.1:5500/form2.html" target="_blank">Forms <span class="arrow">→</span></a>
-        <a class="project" href="moonorbit.html" target="_blank">Moon Orbit <span class="arrow">→</span></a>
-        <a class="project" href="ferriswheel.html" target="_blank">Ferris Wheel <span class="arrow">→</span></a>
-        <a class="project" href="index.html" target="_blank">Live Crypto Tracker <span class="arrow">→</span></a>
+        <a class="project" href="./table.html" target="_blank">Table <span class="arrow">→</span></a>
+        <a class="project" href="./mywebpage.html" target="_blank">My Webpage <span class="arrow">→</span></a>
+        <a class="project" href="./moviecollectionyable.html" target="_blank">Movie Collection <span class="arrow">→</span></a>
+        <a class="project" href="./list.html" target="_blank">List <span class="arrow">→</span></a>
+        <a class="project" href="./recipe.html" target="_blank">Recipe <span class="arrow">→</span></a>
+        <a class="project" href="./form2.html" target="_blank">Forms <span class="arrow">→</span></a>
+        <a class="project" href="./moonorbit.html" target="_blank">Moon Orbit <span class="arrow">→</span></a>
+        <a class="project" href="./ferriswheel.html" target="_blank">Ferris Wheel <span class="arrow">→</span></a>
+        <a class="project" href="./index.html" target="_blank">Live Crypto Tracker <span class="arrow">→</span></a>
       </div>
       </div>
     </section>
