--- a/index.html
+++ b/index.html
@@ -275,6 +275,67 @@
         width: 100%;
       }
     }
+        @media (max-width: 600px) {
+      .sidebar {
+        flex-direction: column;
+        padding: 20px 10px;
+      }
+
+      .sidebar h2 {
+        font-size: 1.8rem;
+        margin-bottom: 20px;
+      }
+
+      .sidebar a {
+        font-size: 1.1rem;
+        margin: 10px 0;
+      }
+
+      .main {
+        padding: 25px 15px;
+        gap: 50px;
+      }
+
+      .intro-text h1 {
+        font-size: 2rem;
+      }
+
+      .intro-text h3 {
+        font-size: 1.1rem;
+      }
+
+      .intro-text p {
+        font-size: 1rem;
+      }
+
+      .intro img {
+        width: 220px;
+        height: 320px;
+        border-radius: 50%;
+      }
+
+      .about-text h2,
+      .skills h2,
+      .education h2,
+      .projects h2 {
+        font-size: 1.6rem;
+      }
+
+      .skills-list li,
+      .edu-item,
+      .project {
+        font-size: 1rem;
+        padding: 10px 14px;
+      }
+
+      .contact-links a {
+        font-size: 1.1rem;
+      }
+
+      footer {
+        font-size: 0.8rem;
+      }
+    }
   </style>
 </head>
 <body>
