--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   .intro img {
     width: 90%;
     max-width: 350px;
-    height: auto; 
+    height: 400px; 
     aspect-ratio: 3 / 4;
     border-radius: 50%;
     border: 4px solid #FF6B35;
