--- a/index.html
+++ b/index.html
@@ -311,13 +311,13 @@
 
   .intro img {
     width: 90%;
-    max-width: 350px;
-    height: 500px; 
-    aspect-ratio: 3 / 4;
-    border-radius: 50%;
+    max-width: 380px;
+    height: auto;
+    border-radius: 25px;
     border: 4px solid #FF6B35;
     margin-top: 20px;
-    object-fit: cover;
+    object-fit: contain; 
+    object-position: center;
     box-shadow: 0 0 25px rgba(255, 107, 53, 0.5);
   }
 
